feat: expose Git-AI release APIs
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)
